--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="/">home</a>
       <a href="https://github.com/zachauten">github</a>
       <a href="https://www.linkedin.com/in/zachauten/">linkedin</a>
-      <a href="contact.html">contact</a>
+      <a href="/resume.html">resume</a>
     </nav>
   </header>
   <main id="main">
