--- a/resume.html
+++ b/resume.html
@@ -46,6 +46,7 @@
       <li>Built "<a href="https://www.bandwidth.com/newsroom/bandwidth-launches-new-send-to-app-bringing-built-in-sms-messaging-to-microsoft-teams/">Send-To</a>", an extension to Microsoft Teams (typescript, nodejs) that allows users to send SMS messages without leaving the application.</li>
       <li>Developed "Call Assure" (java, spring), a service that reroutes customer traffic in the event of network problems.</li>
       <li>Integrated Bandwidth's voice services with Cisco's WebEx ecosystem.</li>
+      <li>Instrumented observability (metrics, logs, traces) in java and node apps using Datadog and Prometheus.</li>
     </ul>
     <h2>
       <span>Software Engineer - <a href="https://www.fidelitycharitable.org">Fidelity Charitable</a></span>
