add link to call assure

--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
       <li>Work on the Integrations/Unified Communications team to create tools for onboarding and integrating new customers and products into Bandwidth's voice network.</li>
       <li>Break down high level business initiatives into actionable tickets for the team.</li>
       <li>Built "<a href="https://www.bandwidth.com/newsroom/bandwidth-launches-new-send-to-app-bringing-built-in-sms-messaging-to-microsoft-teams/">Send-To</a>", an extension to Microsoft Teams (typescript, nodejs) that allows users to send SMS messages without leaving the application.</li>
-      <li>Developed "Call Assure" (java, spring), a service that reroutes customer traffic in the event of network problems.</li>
+      <li>Developed "<a href="https://www.bandwidth.com/products/call-assure/">Call Assure</a>" (java, spring), a service that reroutes customer traffic in the event of network problems.</li>
       <li>Integrated Bandwidth's voice services with Cisco's WebEx ecosystem.</li>
       <li>Instrumented observability (metrics, logs, traces) in java and node apps using Datadog and Prometheus.</li>
     </ul>
