Update panelbear to cronitor

--- a/resume.html
+++ b/resume.html
@@ -22,6 +22,11 @@
       }
     </style>
     <title>Zach's Resume</title>
+    <script async src="https://rum.cronitor.io/script.js"></script>
+    <script>
+        window.cronitor = window.cronitor || function() { (window.cronitor.q = window.cronitor.q || []).push(arguments); };
+        cronitor('config', { clientKey: '9d66f6b97cb4f65407112fc31a855345' });
+    </script>
   </head>
   <body>
   <header>
