--- a/template.html
+++ b/template.html
@@ -10,11 +10,10 @@
   <link rel="icon"
     href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🙃</text></svg>">
   <title>$title$</title>
-  <!-- Panelbear Analytics - We respect your privacy -->
-  <script async src="https://cdn.panelbear.com/analytics.js?site=EjJte2iAepH"></script>
+  <script async src="https://rum.cronitor.io/script.js"></script>
   <script>
-    window.panelbear = window.panelbear || function () { (window.panelbear.q = window.panelbear.q || []).push(arguments); };
-    panelbear('config', { site: 'EjJte2iAepH' });
+    window.cronitor = window.cronitor || function() { (window.cronitor.q = window.cronitor.q || []).push(arguments); };
+    cronitor('config', { clientKey: '9d66f6b97cb4f65407112fc31a855345' });
   </script>
 </head>
 <body>
