--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,7 @@
         font-size: medium;
         font-family: monospace;
         box-sizing: border-box;
+        -webkit-text-size-adjust: 100%;
       }
       h2 {
         display: flex;
