Fix typo, MRR = 'Monthly Recurring Revenue'

--- a/resume.html
+++ b/resume.html
@@ -52,7 +52,7 @@
       <li>Currently, I'm leading a team that's building a service that provisions all voice related features on the global network.</li>
       <li>I work on the Integrations team to create tools for onboarding new customers and products into Bandwidth's voice network. Many of these products are <a href="https://www.bandwidth.com/glossary/bring-your-own-carrier-byoc/">BYOC</a> programs, managed by a Spring(Java) service.</li>
       <li><a href="https://www.bandwidth.com/newsroom/bandwidth-launches-new-send-to-app-bringing-built-in-sms-messaging-to-microsoft-teams/">Send-To</a>, an extension to Microsoft Teams written in Typescript that allows users to send SMS messages without leaving the application.</li>
-      <li><a href="https://www.bandwidth.com/products/call-assure/">Call Assure</a>, a service that reroutes customer traffic in the event of network problems. Call Assure brings in over $90k MMR.</li>
+      <li><a href="https://www.bandwidth.com/products/call-assure/">Call Assure</a>, a service that reroutes customer traffic in the event of network problems. Call Assure brings in over $90k MRR.</li>
       <li><a href="https://www.bandwidth.com/partners/webex-calling/">Cisco Cloud Connect</a>, a BYOC program for WebEx.</li>
       <li><a href="https://www.bandwidth.com/en-gb/partners/microsoft-teams-operator-connect/">Micrsoft Operator Connect</a>, a BYOC program for Teams.</li>
       <li>Containerized the team's projects with Docker to make them easier to deploy. Built CI pipelines in Github Actions to build the images.</li>
