--- a/resume.html
+++ b/resume.html
@@ -49,15 +49,20 @@
       <span>March 2021 - Present</span>
     </h2>
     <ul>
-      <li>Currently, I'm leading a team that's building a service that provisions all voice related features on the global network.</li>
-      <li>I work on the Integrations team to create tools for onboarding new customers and products into Bandwidth's voice network. Many of these products are <a href="https://www.bandwidth.com/glossary/bring-your-own-carrier-byoc/">BYOC</a> programs, managed by a Spring(Java) service.</li>
-      <li><a href="https://www.bandwidth.com/newsroom/bandwidth-launches-new-send-to-app-bringing-built-in-sms-messaging-to-microsoft-teams/">Send-To</a>, an extension to Microsoft Teams written in Typescript that allows users to send SMS messages without leaving the application.</li>
-      <li><a href="https://www.bandwidth.com/products/call-assure/">Call Assure</a>, a service that reroutes customer traffic in the event of network problems. Call Assure brings in over $90k MRR.</li>
-      <li><a href="https://www.bandwidth.com/partners/webex-calling/">Cisco Cloud Connect</a>, a BYOC program for WebEx.</li>
-      <li><a href="https://www.bandwidth.com/en-gb/partners/microsoft-teams-operator-connect/">Micrsoft Operator Connect</a>, a BYOC program for Teams.</li>
-      <li>Containerized the team's projects with Docker to make them easier to deploy. Built CI pipelines in Github Actions to build the images.</li>
-      <li>Instrumented Java and Node apps for observability using Open Telemetry libraries, and Datadog.</li>
+      <li>I'm leading a team that's building services that allow customers to manage voice features like caller id, call fowarding, and others.</li>
+      <li>Work with technical and nontechnical stakeholders to define requirements, design solutions, and plan the roadmap for my team.</li>
+      <li>Most of my work is on Java backends deployed on AWS. We use MariaDB. I occassionaly work with React on the frontend.</li>
+      <li>Introduced my team and other teams to Open Telemetry, and implemented it in several projects.</li>
+      <li>Containerized the team's projects with Docker to make them easier to deploy. Built CI pipelines in Github Actions to build, test, and deploy applications to test and production environments.</li>
       <li>Mentor junior developers through code review and pair programming.</li>
+      <li>Worked on the Integrations team to create tools for onboarding new customers and products into Bandwidth's voice network. Many of these products are <a href="https://www.bandwidth.com/glossary/bring-your-own-carrier-byoc/">BYOC</a> programs.
+        <ul style="list-style:inside">
+        <li><a href="https://www.bandwidth.com/newsroom/bandwidth-launches-new-send-to-app-bringing-built-in-sms-messaging-to-microsoft-teams/">Send-To</a>, an extension to Microsoft Teams written in Typescript that allows users to send SMS messages without leaving the application.</li>
+        <li><a href="https://www.bandwidth.com/products/call-assure/">Call Assure</a>, a service that reroutes customer traffic in the event of network problems. Call Assure brings in over $90k MRR.</li>
+        <li><a href="https://www.bandwidth.com/partners/webex-calling/">Cisco Cloud Connect</a>, a BYOC program for WebEx.</li>
+        <li><a href="https://www.bandwidth.com/en-gb/partners/microsoft-teams-operator-connect/">Micrsoft Operator Connect</a>, a BYOC program for Teams.</li>
+        </ul>
+      </li>
     </ul>
     <h2>
       <span>Software Engineer - <a href="https://www.fidelitycharitable.org">Fidelity Charitable</a></span>
