--- a/static/resume.html
+++ b/static/resume.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <style>
       * {
-        font-size: medium;
+        font-size: large;
         font-family: monospace;
         box-sizing: border-box;
         -webkit-text-size-adjust: 100%;
