--- a/static/resume.html
+++ b/static/resume.html
@@ -60,20 +60,23 @@
         </h2>
         <ul>
           <li>
-            I'm leading a team that's building services that allow customers to
-            manage voice features like caller id, call fowarding, and others.
+            Led a team in developing the provisioning service for Bandwidth's
+            <a href="https://dev.bandwidth.com/docs/universal-platform/"
+            >global VoIP platform</a>.
           </li>
           <li>
-            Work with technical and nontechnical stakeholders to define
-            requirements, design solutions, and plan the roadmap for my team.
+            Collaborated with customers and stakeholders to define requirements,
+            design solutions, and plan the product roadmap.
+          </li>
+          <li>Designed the database schema used to store VoIP settings.</li>
+          <li>
+            Built a pagination system for the ReST API used to provision phone
+            numbers.
           </li>
           <li>
-            Most of my work is on Java backends deployed on AWS. We use MariaDB.
-            I occassionaly work with React on the frontend.
-          </li>
-          <li>
-            Introduced my team and other teams to Open Telemetry, and
-            implemented it in several projects.
+            Introduced my team and other teams to Open Telemetry, and used it to
+            implement distributed tracing, metrics, and structured logging in
+            several projects.
           </li>
           <li>
             Containerized the team's projects with Docker to make them easier to
@@ -81,38 +84,40 @@
             deploy applications to test and production environments.
           </li>
           <li>
-            Mentor junior developers through code review and pair programming.
+            Mentored junior developers through code review and pair programming.
           </li>
           <li>
-            Worked on the Integrations team to create tools for onboarding new
-            customers and products into Bandwidth's voice network. Many of these
-            products are <a
-              href="https://www.bandwidth.com/glossary/bring-your-own-carrier-byoc/"
-            >BYOC</a> programs.
+            Worked on the team developing integrations for Bandwidth's voice
+            network.
             <ul style="list-style: inside">
               <li>
                 <a
                   href="https://www.bandwidth.com/newsroom/bandwidth-launches-new-send-to-app-bringing-built-in-sms-messaging-to-microsoft-teams/"
                 >Send-To</a>, an extension to Microsoft Teams written in
-                Typescript that allows users to send SMS messages without
-                leaving the application.
+                Typescript that allows users to send SMS messages.
               </li>
               <li>
                 <a href="https://www.bandwidth.com/products/call-assure/"
                 >Call Assure</a>, a service that reroutes customer traffic in
-                the event of network problems. Call Assure brings in over $90k
-                MRR.
+                the event of network problems.
               </li>
               <li>
                 <a href="https://www.bandwidth.com/partners/webex-calling/"
-                >Cisco Cloud Connect</a>, a BYOC program for WebEx.
+                >Cisco Cloud Connect</a>, a "<a
+                  href="https://www.bandwidth.com/glossary/bring-your-own-carrier-byoc/"
+                >bring your own carrier</a>" program for WebEx.
               </li>
               <li>
                 <a
                   href="https://www.bandwidth.com/en-gb/partners/microsoft-teams-operator-connect/"
-                >Micrsoft Operator Connect</a>, a BYOC program for Teams.
+                >Microsoft Operator Connect</a>, a "bring your own carrier"
+                program for Teams.
               </li>
             </ul>
+          </li>
+          <li>
+            Tech stack: Java, Spring Boot, React, TypeScript, MariaDB, Docker,
+            AWS (ECS, RDS, Cloudformation), GitHub Actions, Open Telemetry.
           </li>
         </ul>
       </section>
@@ -125,7 +130,7 @@
         <ul>
           <li>
             Wrote a part of the customer facing site that would let customers
-            contribute assets from non-fidelity accounts (nodejs, angular).
+            contribute assets from non-fidelity accounts.
           </li>
           <li>
             Wrote a web service that allowed customers to automatically transfer
@@ -152,6 +157,7 @@
             used in the wider organization. For example I configured a code
             analysis tool to work with NodeJS Jenkins pipelines.
           </li>
+          <li>Tech stack: Java, NodeJS, Angular</li>
         </ul>
       </section>
       <section id="homebrew">
