--- a/static/resume.html
+++ b/static/resume.html
@@ -168,10 +168,10 @@
         </h2>
         <ul>
           <li>
-            Worked on the homebrew cli application. Fixed issues and reviewed
+            Worked on Homebrew's CLI application. Fixed issues and reviewed
             pull requests.
           </li>
-          <li>Updated and reviewed updates to Homebrew’s core repository.</li>
+          <li>Updated and reviewed updates to Homebrew's core repository.</li>
         </ul>
       </section>
       <section id="trilliant">
