change some stuff

--- a/static/resume.html
+++ b/static/resume.html
@@ -70,7 +70,7 @@
           </li>
           <li>Designed the database schema used to store VoIP settings.</li>
           <li>
-            Built a pagination system for the ReST API used to provision phone
+            Built a pagination system for the REST API used to provision phone
             numbers.
           </li>
           <li>
@@ -146,16 +146,15 @@
           </li>
           <li>Wrote automated unit, browser, and api tests.</li>
           <li>
-            Worked on "Innovation Day" hackathons. For one I implemented a tool
-            that provided our front end with realistic data in test
-            environments, and for another I worked with a designer to create a
-            proof of concept for a front end component.
+            Worked on "Innovation Day" hackathons. Implemented a tool that
+            provided our front end with realistic data in test environments, and
+            created a proof-of-concept for a front end component.
           </li>
           <li>
-            Was on the architecture group where I wrote documentation and made
-            proof of concepts for things that the architecture team wants to see
-            used in the wider organization. For example I configured a code
-            analysis tool to work with NodeJS Jenkins pipelines.
+            Contributed to architectural standards as a team representative on
+            the Architecture Council. Developed detailed documentation and
+            functional proof-of-concepts, such as integrating a code analysis
+            tool with NodeJS Jenkins pipelines
           </li>
           <li>Tech stack: Java, NodeJS, Angular</li>
         </ul>
@@ -168,8 +167,8 @@
         </h2>
         <ul>
           <li>
-            Worked on Homebrew's CLI application. Fixed issues and reviewed
-            pull requests.
+            Worked on Homebrew's CLI application. Fixed issues and reviewed pull
+            requests.
           </li>
           <li>Updated and reviewed updates to Homebrew's core repository.</li>
         </ul>
@@ -195,7 +194,7 @@
           </li>
         </ul>
       </section>
-      <section id="honeywell" hidden>
+      <section id="honeywell">
         <h2>
           <span>Firmware Test Engineer - <a href="https://www.honeywell.com"
             >Honeywell</a></span>
